# s3-server

./: Cargo.toml
src/: errors.rs  signature_v4.rs
src/headers/: authorization_v4.rs  range.rs
src/ops/: complete_multipart_upload.rs  create_bucket.rs  delete_objects.rs  put_object.rs
src/storages/: fs.rs
src/streams/: multipart.rs
src/utils/: also.rs  response.rs
tests/service/: utils.rs
