[package]
name = "s3-server"
version = "0.2.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/datenlord/s3-server"
readme = "README.md"
description = "An experimental generic S3 server"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.59"

[features]
default = []
binary = [
    "anyhow", 
    "dotenv", 
    "structopt", 
    "tokio", 
    "tracing-subscriber"
]

[[bin]]
name = "s3-server"
required-features = ["binary"]

[dependencies]
anyhow = { version = "1.0.82", optional = true }
async-fs = "2.1.1"
async-trait = "0.1.80"
backtrace = "0.3.71"
base64-simd = "0.8.0"
chrono = "0.4.37"
const-str = { version = "0.5.7", features = ["regex"] }
dotenv = { version = "0.15.0", optional = true }
futures = "0.3.30"
hex-simd = "0.8.0"
hmac = "0.12.1"
http = "0.2.7"
httparse = "1.8.0"
hyper = { version = "0.14.18", features = ["server"] }
md-5 = "0.10.6"
memchr = "2.7.2"
mime = "0.3.17"
nom = "7.1.3"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
pin-project-lite = "0.2.14"
quick-xml = { version = "0.31.0", features = ["serialize"] }
regex = "1.10.4"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.197"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
smallvec = "1.13.2"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"], optional = true }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter", "time"] }
transform-stream = "0.3.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
xml-rs = "0.8.20"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
